--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,12 +1,29 @@
-name: build
-on: [push]
+name: Go
+
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+  workflow_dispatch:
+    branches: [ master ]
+
 jobs:
+
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-go@v1
+    - name: Check out code
+      uses: actions/checkout@v3
+
+    - name: Set up Go
+      uses: actions/setup-go@v3
       with:
         go-version: 1.x
-    - run: go vet
-    - run: go test -v -cover -bench=. -benchmem
+
+    - name: Build
+      run: go build -v ./...
+
+    - name: Test
+      run: go test -v ./...
